# color-extractor

./: .gitignore  README.md  api.py  inference_api.py  main.py  masking-issue-research.md  nlp_utils.py  pyproject.toml  research.md  result.json  result_after_fix.json  result_debug.json  result_new.json  result_plaid_debug.json
agent/: README.md  color_counts.ts  eval_colors.ts  eval_ids.txt  eval_ids_19.txt  index.ts  package.json
agent/data/: color-labels.json
color-index-updater/: README.md  index.ts  package.json
color_extractor/: back.py  skin.py
raw_values_11/: 16470316.json  16470320.json  16650788.json  19190488.json  19217244.json  19433556.json  19579168.json  20468268.json  20691396.json  21250954.json  21297152.json  21928834.json  22510762.json  22510770.json  22510782.json  22510790.json  22510798.json  22510806.json  22510820.json  22510828.json  23089816.json  23697492.json  23797872.json  23886468.json  24790630.json  25054082.json  25361388.json  25361398.json  25361400.json  25556102.json  26228296.json  26228308.json  26595360.json  26763474.json  27278250.json  27397522.json  28169014.json  28354598.json  28542902.json  28731006.json  (+60 more)
tests/: test_api.py  test_cli.py  test_naming.py  test_palette.py  test_pipeline.py  test_url_loading.py
tools/: build_npz.py
v2/: README.md  api.py  main.py  nlp_utils.py  pyproject.toml
v2/experiments/segformer_clothes/: README.md  run.py
v2/src/color_pipeline/: extract.py  io.py  localize.py  naming.py  pipeline.py
v2/tests/: test_api.py  test_cli.py  test_naming.py  test_palette.py  test_pipeline.py  test_url_loading.py
(+11 files in other folders)
