[project]
name = "color-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "cycler>=0.12.1",
    "dask>=2026.1.2",
    "docopt>=0.6.2",
    "ijson>=3.4.0.post0",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pillow>=12.1.0",
    "pip>=26.0.1",
    "pyparsing>=3.3.2",
    "python-dateutil>=2.9.0.post0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "toolz>=1.1.0",
    "tqdm>=4.67.3",
]

[tool.uv.workspace]
members = [
    "v2",
]
